DevOCL/src/objects/CLQ_Building_Approval__c.object
<CustomObject>
    <fields>
        <fullName>CLQ_Approval_Date__c</fullName>
        <description>Date the building approval was granted</description>
        <inlineHelpText>Date the building approval was granted</inlineHelpText>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Building Approval object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_Inspection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inspection</label>
        <referenceTo>CLQ_Inspection__c</referenceTo>
        <relationshipLabel>Building Approvals</relationshipLabel>
        <relationshipName>Building_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_Maximum_Occupancy_Limit__c</fullName>
        <description>Maximum number of people allowed in the structure.</description>
        <inlineHelpText>Maximum number of people allowed in the structure.</inlineHelpText>
        <label>Maximum Occupancy Limit</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Maximum_Occupancy_Under_2_1_2__c</fullName>
        <description>Maximum number of people allowed in the structure under the age of 2 1/2.</description>
        <inlineHelpText>Maximum number of people allowed in the structure under the age of 2 1/2.</inlineHelpText>
        <label>Maximum Occupancy Under 2 1/2</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Structure_Name_Description__c</fullName>
        <label>Structure Name/Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLQ_Use_Group_Building_Code__c</fullName>
        <description>Select the appropriate building code or use group.</description>
        <inlineHelpText>Select the appropriate building code or use group.</inlineHelpText>
        <label>Use Group/Building Code</label>
        <picklist>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E with I-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB 303 (pre 1970)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB 57 (1970-1972)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB 61 (1972-1979)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B Occ. – 49</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Building</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Building Approval</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Building Department</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Building Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>